<resources>
    <string name="app_name">Flexercise</string>
    <string name="Exercises_Button">Exercises</string>
    <string name="Workouts_Button">Workouts</string>
    <string name="Settings_Button">Settings</string>
    <string name="exercises">Exercises</string>
    <string name="spinnerPrompt">Sort by</string>
    <string name="backButton">Back button</string>
    <string name="workouts">Workouts</string>
    <string name="settings">Settings</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="doneButton">Done</string>
    <string name="add_new_workout">Add new workout</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="category">Category:</string>
    <string name="chest">Chest</string>
    <string name="choose_categories">Choose categories</string>
    <string name="legs">Legs</string>
    <string name="arms">Arms</string>
    <string name="abs">Abs</string>
    <string name="back">Back</string>
    <string name="cardio">Cardio</string>
    <string name="exercise_media">Add media:</string>
    <string name="media_spinner_prompt">Select media type</string>
    <string name="exercise_number_of_sets">Number of sets:</string>
    <string name="exercise_number_of_sets_hint">Enter the number of sets</string>
    <string name="exercise_max_weight_KG">Max weight (KG):</string>
    <string name="exercise_max_weight_hint_KG">Enter max weight (KG)</string>
    <string name="exercise_starting_weight_KG">Starting weight (KG):</string>
    <string name="exercise_starting_weight_hint_KG">Enter starting weight (KG)</string>
    <string name="add_to_workout">Add to workout?</string>
    <string name="select_all_that_apply">Select all workouts</string>
    <string name="exercise_notes">Notes:</string>
    <string name="notes_hint">Add notes</string>
    <string name="exercise_name_hint">Exercise name</string>
    <string name="details_exercise_name">Exercise name</string>
    <string name="open">Open</string>
    <string name="three">3</string>
    <string name="forty">40</string>
    <string name="twenty">20</string>
    <string name="exercise_max_weight">Max weight:</string>
    <string name="KG"> KG</string>
    <string name="exercise_starting_weight">Starting weight:</string>
    <string name="part_of_x_workouts">Added to workouts:</string>
    <string name="workouts_added_to_list">Examples workout One, Examples workout Two, Examples workout Three</string>
    <string name="notes_details_view_sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel felis ut risus porta gravida at vel purus. Praesent maximus id metus suscipit semper. Vivamus a massa a dolor cursus sagittis at vel nulla. In scelerisque gravida lacus sit amet auctor. Phasellus sagittis nisi eu est varius, ut semper odio condimentum. Ut consectetur feugiat luctus. Vivamus aliquam nulla euismod, rhoncus nibh sed, sollicitudin felis. Etiam quis purus erat. Integer sodales eros diam, eget suscipit massa molestie sed.</string>
    <string name="media_details_view">Media:</string>
    <string name="exercise_name_placeholder">Placeholder</string>
    <string name="editButton">Edit</string>
    <string name="flexercise_logo">Flexercise logo</string>
    <string name="no_workouts_selected">No workouts selected</string>
    <string name="edit_exercise">Edit exercise</string>
    <string name="exercises_to_include_tv">Exercises:</string>
    <string name="workout_name">Workout Name:</string>
    <string name="workout_name_hint">Enter workout name</string>
    <string name="sets">Sets:</string>
    <string name="max_weight">Max weight:</string>
    <string name="starting_weight">Min weight:</string>
    <string name="nextButton">Next</string>
    <string name="previousButton">Previous</string>
    <string name="categories">Categories</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="preferred_weight">Weight units:</string>
    <string name="LBS"> lbs</string>
    <string name="preferred_distance">Distance units:</string>
    <string name="KM"> KM</string>
    <string name="miles"> Miles</string>
    <string name="erase_all">Erase All Data:</string>
    <string name="erase_all_button">Erase</string>
    <string name="remove_adverts">Remove adverts:</string>
    <string name="remove_ads_button">Remove</string>
    <string name="show_timer">Show timer:</string>
    <string name="only_available_to_premium">Upgrade to enable</string>
    <string name="KG_STATIC">KG</string>
    <string name="LBS_STATIC">lbs</string>
    <string name="KM_STATIC">KM</string>
    <string name="miles_STATIC">Miles</string>
    <string name="exercise_max_weight_LBS">Max weight (lbs):</string>
    <string name="exercise_max_weight_hint_LBS">Enter max weight (lbs)</string>
    <string name="exercise_starting_weight_LBS">Starting weight (lbs):</string>
    <string name="exercise_starting_weight_hint_LBS">Enter starting weight (lbs)</string>
    <string name="delete_all_title">Delete all confirmation</string>
    <string name="delete_all_message">If you confirm, you will erase all exercises and workouts from the application. This action is irreversible so please be certain before you confirm.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="YouTube_link">YouTube link:</string>
    <string name="enter_youtube_id">Enter a Youtube URL</string>
    <string name="of">of</string>
    <string name="zero_placeholder">0</string>
    <string name="next">Next</string>
    <string name="set_widget">Set workout to widget</string>
    <string name="number_of_set_text">Sets:</string>
    <string name="max_weight_text">// Max Weight:</string>
    <string name="starting_weight_text">// Starting Weight:</string>
    <string name="load_exercise">Load exercise</string>
    <string name="please_select_a_workout">You haven\'t selected a workout yet. Add one now?</string>
    <string name="load_workouts">Load workouts</string>
    <string name="add_a_youtube_url">Enter a YouTube URL:</string>
    <string name="youtube_url_hint">YouTube URL</string>
    <string name="media_none">No media selected</string>
    <string name="media_one">Add Youtube link</string>
    <string name="media_two">Add custom video</string>
    <string name="add_a_local_file">Select video from camera roll:</string>
    <string name="choose_file">Choose file</string>
    <string name="add_a_local_file_button">Add a local file button</string>
    <string name="no_media">No Media Alert</string>
    <string name="no_media_message">Sorry, but you haven\'t added a media file for this exercise yet. Edit the exercise to add one.</string>
    <string name="invalid_youtube">Invalid YouTube Link</string>
    <string name="invalid_youtube_message">Your YouTube link is invalid. Please ensure that it contains \"youtube.com/watch?v=\" and then the code that follows.</string>
    <string name="no_video_selected">No video selected</string>
    <string name="no_video_selected_message">You haven\'t selected a video, please either select no media or choose a video to associate with this workout.</string>
    <string name="youtube_url_start">http://www.youtube.com/watch?v=</string>
    <string name="exercise_type">Type of exercise:</string>
    <string name="weight">Weight</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="distance_km">Distance (KM):</string>
    <string name="distance_miles">Distance (Miles):</string>
    <string name="exercise_distance_hint_KM">Distance in KM</string>
    <string name="exercise_distance_hint_miles">Distance in Miles</string>
    <string name="time_minutes">Time in Minutes</string>
    <string name="minutes"> minutes</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="restart">Restart</string>
    <string name="start">Start</string>
    <string name="no_time">00:00</string>
    <string name="only_available_with_adverts_off">Only available with adverts disabled</string>
    <string name="news">News</string>
    <string name="newsJson">https://newsapi.org/v2/everything?q=fitness%20techniques&amp;apiKey=</string>
    <string name="no_description_available">No description available</string>
    <string name="news_button">News</string>
    <string name="no_news">Sorry, but something is wrong with the connection between you and the news source. Please try again later.</string>
    <string name="no_category">No Category Selected</string>
    <string name="please_select_a_category">In order to save your exercise, please assign at least one category.</string>
    <string name="please_select_a_category_workout_version">In order to save your workout, please assign at least one category.</string>
    <string name="small_flexercise_logo">Small flexercise logo</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="select_media_type_spinner">Select media type spinner</string>
    <string name="workout_list_spinner">Workout list spinner</string>
    <string name="advert">Advert</string>
    <string name="open_media">Open media</string>
    <string name="home_screen_background">Home screen background, man lifting weight</string>
    <string name="weight_checkbox">Checkbox for weight type exercise</string>
    <string name="cardio_checkbox">Checkbox for cardio type exercise</string>
    <string name="exercise_media_spinner">Spinner for exercise media</string>
    <string name="funny_image">Image with a 404 style visual joke.</string>
    <string name="KG_checkbox">Checkbox for KG</string>
    <string name="lbs_checkbox">Checkbox for lbs</string>
    <string name="KM_checkbox">Checkbox for KM</string>
    <string name="miles_checkbox">Checkbox for miles</string>
    <string name="switch_for_timer">Switch to turn timer on or off</string>
    <string name="restart_timer">Restart the timer</string>
    <string name="timer">Timer</string>
    <string name="start_timer">Start timer</string>
    <string-array name="spinner">
        <item>Alphabetical</item>
        <item>Category</item>
    </string-array>
    <string-array name="media_spinner">
        <item>No media selected</item>
        <item>Add Youtube link</item>
        <item>Add custom video</item>
    </string-array>
    <string-array name="workouts_spinner">
        <item>Test One</item>
        <item>Test Two</item>
        <item>Test Three</item>
        <item>Test Four</item>
        <item>Test Five</item>
        <item>Test Six</item>
    </string-array>
    <string-array name="exercises_spinner">
        <item>Test One</item>
        <item>Test Two</item>
        <item>Test Three</item>
        <item>Test Four</item>
        <item>Test Five</item>
        <item>Test Six</item>
    </string-array>

</resources>
