<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:contentDescription="@string/home_screen_background"
    android:background="@drawable/flex_home_background"
    android:theme="@style/AppTheme"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/flexercise_logo"
        android:cropToPadding="false"
        android:elevation="64dp"
        android:src="@drawable/flexercise_homescreen_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/exercises_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorHomeButton"
        android:text="@string/Exercises_Button"
        android:contentDescription="@string/exercises"
        app:layout_constraintBottom_toTopOf="@+id/workouts_button"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/workouts_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorHomeButton"
        android:text="@string/Workouts_Button"
        android:contentDescription="@string/workouts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/setttings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorHomeButton"
        android:text="@string/Settings_Button"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/news_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorHomeButton"
        android:text="@string/news_button"
        android:contentDescription="@string/news"
        app:layout_constraintBottom_toTopOf="@+id/setttings_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" />



</android.support.constraint.ConstraintLayout>

