<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDoubleDark">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:elevation="24dp"
        android:orientation="vertical"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:contentDescription="@string/small_flexercise_logo"
                android:src="@drawable/flexercise_logo_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageButton
                    android:id="@+id/settings_back_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/backButton"
                    android:scaleType="fitCenter"
                    android:src="@drawable/back_arrow" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="7"
                    android:text="@string/settings"
                    android:textColor="@color/spinnerWhite"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/spinnerWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/preferred_weight"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/weight_unit_kg_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:contentDescription="@string/KG_checkbox"
                android:text="@string/KG_STATIC"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/weight_unit_lbs_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/LBS_STATIC"
                android:contentDescription="@string/lbs_checkbox"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/preferred_distance"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/distance_unit_km_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/KM_STATIC"
                android:contentDescription="@string/KM_checkbox"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/distance_unit_miles_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/miles_STATIC"
                android:contentDescription="@string/miles_checkbox"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/erase_all"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/erase_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:text="@string/erase_all_button"
                android:contentDescription="@string/erase_all"
                android:textColor="@color/spinnerWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/remove_adverts"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/remove_ads_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:text="@string/remove_ads_button"
                android:contentDescription="@string/remove_adverts"
                android:textColor="@color/spinnerWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/show_timer"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/updrade_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/only_available_with_adverts_off"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/enable_timer_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textOn="@string/on"
                android:textOff="@string/off"
                android:contentDescription="@string/switch_for_timer"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/advert"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
</RelativeLayout>